@@ -1,21 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  
 	<title>Blueprint CSS Framework Test Suite</title>
 
-    <!-- Framework CSS -->
-	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection" />
-	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print" />
-    <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
+  <!-- Framework CSS -->
+	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print">
+  <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	
 	<!-- Import plugins for the sake of testing -->
-	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection" />
-	<link rel="stylesheet" href="../blueprint/plugins/buttons/buttons.css" type="text/css" media="screen, projection" />	
-	<link rel="stylesheet" href="../blueprint/plugins/link-icons/link-icons.css" type="text/css" media="screen, projection" />	
+	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="../blueprint/plugins/buttons/buttons.css" type="text/css" media="screen, projection">	
 	
 	<!-- Show the grid and baseline -->
 	<style type="text/css">
@@ -34,13 +33,13 @@
     <h3>Buttons plugin</h3>
     <p>
       <button type="submit" class="button positive">
-      	<img src="../blueprint/plugins/buttons/icons/tick.png" alt=""/> Save
+      	<img src="../blueprint/plugins/buttons/icons/tick.png" alt=""> Save
       </button>
   	  <a class="button" href="/password/reset/">
-  	    <img src="../blueprint/plugins/buttons/icons/key.png" alt=""/> Change Password
+  	    <img src="../blueprint/plugins/buttons/icons/key.png" alt=""> Change Password
   	  </a>
   	  <a href="#" class="button negative">
-  	    <img src="../blueprint/plugins/buttons/icons/cross.png" alt=""/> Cancel
+  	    <img src="../blueprint/plugins/buttons/icons/cross.png" alt=""> Cancel
   	  </a>
     </p>
     <p>
@@ -50,13 +49,13 @@
     </p>
     <p>
       <button type="submit" class="button positive">
-      	<img src="../blueprint/plugins/buttons/icons/tick.png" alt=""/> Save
+      	<img src="../blueprint/plugins/buttons/icons/tick.png" alt=""> Save
       </button>
   	  <a class="button" href="/password/reset/">
-  	    <img src="../blueprint/plugins/buttons/icons/key.png" alt=""/> Change Password
+  	    <img src="../blueprint/plugins/buttons/icons/key.png" alt=""> Change Password
   	  </a>
   	  <a href="#" class="button negative">
-  	    <img src="../blueprint/plugins/buttons/icons/cross.png" alt=""/> Cancel
+  	    <img src="../blueprint/plugins/buttons/icons/cross.png" alt=""> Cancel
   	  </a>
     </p>
     <hr>
@@ -67,11 +66,8 @@
     </ul>
     <hr>
       
-	<div class="column span-24">
-    <a href="http://validator.w3.org/check?uri=referer" class="noicon">
-      <img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
-    </a>
-	</div>		
+  <p><a href="http://validator.w3.org/check?uri=referer">
+  <img src="http://www.w3.org/Icons/valid-html401-blue" alt="Valid HTML 4.01 Strict" height="31" width="88"></a></p>
 
 </div>
 </body>
